<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white"
    tools:context=".View.Fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@null"
            android:src="@drawable/diva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="33dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/hello"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/hello"
            app:layout_constraintTop_toTopOf="parent" />


        <SearchView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_background_search"
            android:searchIcon="@drawable/ic_search"
            app:layout_constraintTop_toBottomOf="@id/hello"
            tools:ignore="UnusedAttribute" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_menu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/sv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:foregroundGravity="center">

                <Button
                    android:id="@+id/bt_materi"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="15dp"
                    style="?borderlessButtonStyle"
                    android:background="@drawable/ic_materi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/materi"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:text="@string/materi"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_materi" />

                <Button
                    android:id="@+id/bt_tutorial"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    style="?borderlessButtonStyle"
                    android:background="@drawable/ic_tutorial"
                    app:layout_constraintStart_toEndOf="@id/bt_materi"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:text="@string/tutorial"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/materi"
                    app:layout_constraintTop_toBottomOf="@id/bt_tutorial" />

                <Button
                    android:id="@+id/bt_ujian"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="30dp"
                    style="?borderlessButtonStyle"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_ujian"
                    app:layout_constraintStart_toEndOf="@id/bt_tutorial"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ujian"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:text="@string/ujian"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/tutorial"
                    app:layout_constraintTop_toBottomOf="@id/bt_ujian" />

                <Button
                    android:id="@+id/bt_quiz"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    style="?borderlessButtonStyle"
                    android:background="@drawable/ic_quiz"
                    app:layout_constraintStart_toEndOf="@id/bt_ujian"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/quiz"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:text="@string/quiz"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/ujian"
                    app:layout_constraintTop_toBottomOf="@id/bt_quiz" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/berita_seni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/berita_seni"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_menu" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/berita_seni" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>